#1: Trying to get JSX to work with it

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="main-container">
+  <div id="app">
     APP WILL RENDER HERE
   </div>
   <!-- REFERENCE TO Webpack's dev server file -->
